Update lists at 20240325-1500

--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -88,6 +88,7 @@ deny 107.189.8.226;
 deny 107.189.8.238;
 deny 107.189.8.5;
 deny 107.189.8.56;
+deny 107.20.208.179;
 deny 108.181.27.205;
 deny 108.181.69.243;
 deny 108.61.189.136;
@@ -197,6 +198,7 @@ deny 176.58.100.98;
 deny 176.58.121.177;
 deny 176.58.89.182;
 deny 178.170.37.11;
+deny 178.17.170.184;
 deny 178.17.170.23;
 deny 178.17.171.102;
 deny 178.17.174.14;
@@ -262,6 +264,7 @@ deny 185.130.44.43;
 deny 185.130.47.58;
 deny 185.141.147.128;
 deny 185.142.239.49;
+deny 185.146.232.234;
 deny 185.146.232.243;
 deny 185.14.97.37;
 deny 185.153.197.227;
@@ -495,9 +498,6 @@ deny 185.225.69.203;
 deny 185.225.69.232;
 deny 185.227.134.106;
 deny 185.227.68.78;
-deny 185.230.162.125;
-deny 185.230.162.218;
-deny 185.230.162.34;
 deny 185.233.100.23;
 deny 185.235.146.29;
 deny 185.239.71.160;
@@ -632,7 +632,6 @@ deny 193.189.100.199;
 deny 193.189.100.200;
 deny 193.189.100.201;
 deny 193.189.100.202;
-deny 193.189.100.203;
 deny 193.189.100.204;
 deny 193.189.100.205;
 deny 193.189.100.206;
@@ -900,6 +899,7 @@ deny 23.154.177.12;
 deny 23.154.177.13;
 deny 23.154.177.14;
 deny 23.154.177.15;
+deny 23.154.177.16;
 deny 23.154.177.17;
 deny 23.154.177.18;
 deny 23.154.177.19;
@@ -941,6 +941,9 @@ deny 2.58.56.248;
 deny 2.58.56.43;
 deny 2.58.56.90;
 deny 2.58.95.45;
+deny 2.58.95.47;
+deny 2.58.95.53;
+deny 2.58.95.59;
 deny 2600:3c00:e000:4ee::2;
 deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c03:e000:fa::2;
@@ -1093,7 +1096,6 @@ deny 2800:ba0:6:c1::4858;
 deny 2a00:1169:119:b120::;
 deny 2a00:1169:11f:5200::;
 deny 2a00:1169:11f:d680::;
-deny 2a00:11c0:1c:311::5;
 deny 2a00:11c0:1f:1::55;
 deny 2a00:1728:3f::c0cc:80;
 deny 2a00:1728:f:f:f:f:c03c:9898;
@@ -1101,6 +1103,7 @@ deny 2a00:1b88:4::2;
 deny 2a00:1b88:4::4;
 deny 2a00:1dc0:caff:138::94d2;
 deny 2a00:1dc0:caff:15::45dc;
+deny 2a00:1dc0:caff:178::982b;
 deny 2a00:1dc0:caff:73::d735;
 deny 2a00:1dc0:caff:8b::24bd;
 deny 2a00:99a0:0:1000::2;
@@ -1447,9 +1450,6 @@ deny 2a0b:f4c2::6;
 deny 2a0b:f4c2::7;
 deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
-deny 2a0c:2500:571:3d9:35a7:7ab0:9c7a:128a;
-deny 2a0c:2500:571:3d9:490b:80ce:9da2:c459;
-deny 2a0c:2500:571:3d9:5f6b:d5f4:a8cf:c713;
 deny 2a0c:e300::23;
 deny 2a0d:3e83:1:b284::1;
 deny 2a0d:c2c0:1:4::2;
@@ -1469,7 +1469,6 @@ deny 2a0f:df00:0:255::199;
 deny 2a0f:df00:0:255::200;
 deny 2a0f:df00:0:255::201;
 deny 2a0f:df00:0:255::202;
-deny 2a0f:df00:0:255::203;
 deny 2a0f:df00:0:255::204;
 deny 2a0f:df00:0:255::205;
 deny 2a0f:df00:0:255::206;
@@ -1500,7 +1499,7 @@ deny 2a12:8641:3:24::;
 deny 2a12:a800:2:1:45:138:16:203;
 deny 31.129.22.65;
 deny 31.220.87.46;
-deny 34.239.41.1;
+deny 31.220.98.139;
 deny 35.0.127.52;
 deny 37.1.201.144;
 deny 37.120.166.23;
@@ -1509,7 +1508,6 @@ deny 37.120.239.59;
 deny 37.187.5.192;
 deny 37.228.129.128;
 deny 37.228.129.63;
-deny 37.252.255.135;
 deny 37.27.20.230;
 deny 37.48.120.196;
 deny 37.48.70.156;
@@ -1666,6 +1664,7 @@ deny 5.45.98.162;
 deny 5.79.66.19;
 deny 62.133.45.2;
 deny 62.171.137.169;
+deny 62.182.83.179;
 deny 62.182.84.146;
 deny 64.227.115.78;
 deny 64.5.123.66;
@@ -1724,6 +1723,7 @@ deny 84.54.51.68;
 deny 84.54.51.69;
 deny 85.17.9.83;
 deny 85.204.116.211;
+deny 85.204.116.239;
 deny 85.204.116.88;
 deny 85.215.76.62;
 deny 85.93.218.204;
