--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -88,6 +88,7 @@ allow 107.189.8.226;
 allow 107.189.8.238;
 allow 107.189.8.5;
 allow 107.189.8.56;
+allow 107.20.208.179;
 allow 108.181.27.205;
 allow 108.181.69.243;
 allow 108.61.189.136;
@@ -197,6 +198,7 @@ allow 176.58.100.98;
 allow 176.58.121.177;
 allow 176.58.89.182;
 allow 178.170.37.11;
+allow 178.17.170.184;
 allow 178.17.170.23;
 allow 178.17.171.102;
 allow 178.17.174.14;
@@ -262,6 +264,7 @@ allow 185.130.44.43;
 allow 185.130.47.58;
 allow 185.141.147.128;
 allow 185.142.239.49;
+allow 185.146.232.234;
 allow 185.146.232.243;
 allow 185.14.97.37;
 allow 185.153.197.227;
@@ -495,9 +498,6 @@ allow 185.225.69.203;
 allow 185.225.69.232;
 allow 185.227.134.106;
 allow 185.227.68.78;
-allow 185.230.162.125;
-allow 185.230.162.218;
-allow 185.230.162.34;
 allow 185.233.100.23;
 allow 185.235.146.29;
 allow 185.239.71.160;
@@ -632,7 +632,6 @@ allow 193.189.100.199;
 allow 193.189.100.200;
 allow 193.189.100.201;
 allow 193.189.100.202;
-allow 193.189.100.203;
 allow 193.189.100.204;
 allow 193.189.100.205;
 allow 193.189.100.206;
@@ -900,6 +899,7 @@ allow 23.154.177.12;
 allow 23.154.177.13;
 allow 23.154.177.14;
 allow 23.154.177.15;
+allow 23.154.177.16;
 allow 23.154.177.17;
 allow 23.154.177.18;
 allow 23.154.177.19;
@@ -941,6 +941,9 @@ allow 2.58.56.248;
 allow 2.58.56.43;
 allow 2.58.56.90;
 allow 2.58.95.45;
+allow 2.58.95.47;
+allow 2.58.95.53;
+allow 2.58.95.59;
 allow 2600:3c00:e000:4ee::2;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::2;
@@ -1093,7 +1096,6 @@ allow 2800:ba0:6:c1::4858;
 allow 2a00:1169:119:b120::;
 allow 2a00:1169:11f:5200::;
 allow 2a00:1169:11f:d680::;
-allow 2a00:11c0:1c:311::5;
 allow 2a00:11c0:1f:1::55;
 allow 2a00:1728:3f::c0cc:80;
 allow 2a00:1728:f:f:f:f:c03c:9898;
@@ -1101,6 +1103,7 @@ allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:138::94d2;
 allow 2a00:1dc0:caff:15::45dc;
+allow 2a00:1dc0:caff:178::982b;
 allow 2a00:1dc0:caff:73::d735;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:99a0:0:1000::2;
@@ -1447,9 +1450,6 @@ allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
-allow 2a0c:2500:571:3d9:35a7:7ab0:9c7a:128a;
-allow 2a0c:2500:571:3d9:490b:80ce:9da2:c459;
-allow 2a0c:2500:571:3d9:5f6b:d5f4:a8cf:c713;
 allow 2a0c:e300::23;
 allow 2a0d:3e83:1:b284::1;
 allow 2a0d:c2c0:1:4::2;
@@ -1469,7 +1469,6 @@ allow 2a0f:df00:0:255::199;
 allow 2a0f:df00:0:255::200;
 allow 2a0f:df00:0:255::201;
 allow 2a0f:df00:0:255::202;
-allow 2a0f:df00:0:255::203;
 allow 2a0f:df00:0:255::204;
 allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
@@ -1500,7 +1499,7 @@ allow 2a12:8641:3:24::;
 allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.220.87.46;
-allow 34.239.41.1;
+allow 31.220.98.139;
 allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.166.23;
@@ -1509,7 +1508,6 @@ allow 37.120.239.59;
 allow 37.187.5.192;
 allow 37.228.129.128;
 allow 37.228.129.63;
-allow 37.252.255.135;
 allow 37.27.20.230;
 allow 37.48.120.196;
 allow 37.48.70.156;
@@ -1666,6 +1664,7 @@ allow 5.45.98.162;
 allow 5.79.66.19;
 allow 62.133.45.2;
 allow 62.171.137.169;
+allow 62.182.83.179;
 allow 62.182.84.146;
 allow 64.227.115.78;
 allow 64.5.123.66;
@@ -1724,6 +1723,7 @@ allow 84.54.51.68;
 allow 84.54.51.69;
 allow 85.17.9.83;
 allow 85.204.116.211;
+allow 85.204.116.239;
 allow 85.204.116.88;
 allow 85.215.76.62;
 allow 85.93.218.204;
