--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1,11 +1,11 @@
 allow 102.130.113.9;
+allow 102.130.123.16;
 allow 102.130.127.117;
 allow 103.106.3.94;
 allow 103.109.101.105;
 allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
-allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -133,8 +133,6 @@ allow 144.172.73.11;
 allow 144.172.73.6;
 allow 144.217.80.80;
 allow 144.24.197.112;
-allow 146.19.143.64;
-allow 146.19.143.82;
 allow 146.59.234.220;
 allow 146.59.35.246;
 allow 146.59.35.38;
@@ -188,6 +186,7 @@ allow 172.81.131.156;
 allow 172.81.131.84;
 allow 173.232.195.137;
 allow 173.232.195.144;
+allow 173.232.195.146;
 allow 173.249.57.253;
 allow 173.255.255.215;
 allow 175.214.127.6;
@@ -281,8 +280,6 @@ allow 185.181.61.142;
 allow 185.181.61.18;
 allow 185.183.157.214;
 allow 185.183.159.40;
-allow 185.193.127.76;
-allow 185.193.127.88;
 allow 185.193.158.134;
 allow 185.193.52.180;
 allow 185.195.237.238;
@@ -621,7 +618,6 @@ allow 192.46.227.185;
 allow 192.99.168.180;
 allow 193.105.134.150;
 allow 193.105.134.155;
-allow 193.109.120.85;
 allow 193.168.141.245;
 allow 193.189.100.194;
 allow 193.189.100.195;
@@ -849,7 +845,6 @@ allow 209.141.51.30;
 allow 209.141.54.203;
 allow 209.141.55.26;
 allow 209.141.59.116;
-allow 209.141.62.183;
 allow 209.141.62.71;
 allow 212.21.66.6;
 allow 212.69.167.80;
@@ -877,6 +872,7 @@ allow 23.129.64.139;
 allow 23.129.64.140;
 allow 23.129.64.141;
 allow 23.129.64.142;
+allow 23.129.64.143;
 allow 23.129.64.144;
 allow 23.129.64.145;
 allow 23.129.64.146;
@@ -918,15 +914,9 @@ allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.6;
-allow 23.155.8.104;
 allow 23.184.48.101;
 allow 23.184.48.127;
 allow 23.184.48.128;
-allow 23.184.48.221;
-allow 23.184.48.222;
-allow 23.184.48.223;
-allow 23.184.48.224;
-allow 23.184.48.94;
 allow 23.94.211.25;
 allow 23.94.36.142;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
@@ -949,7 +939,6 @@ allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::2;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c07::f03c:94ff:fe12:513e;
-allow 2602:2e5::104;
 allow 2602:2e6:0:6::;
 allow 2602:fbf6:11:27::3;
 allow 2602:fc24:11:26c3::1;
@@ -960,13 +949,8 @@ allow 2602:fc24:12:4870:39ca:318:0:1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
 allow 2602:fc24:18:148f::1;
-allow 2602:fc24:18:149a::1;
 allow 2602:fc24:18:1be9::1;
 allow 2602:fc24:18:1c54::1;
-allow 2602:fc24:18:2ed8::1;
-allow 2602:fc24:18:96e5::1;
-allow 2602:fc24:18:cb10::1;
-allow 2602:fc24:18:d21a::1;
 allow 2602:fccf:310:1::a;
 allow 2602:fef9:100:1100::199;
 allow 2603:3:6106:2460::;
@@ -997,7 +981,6 @@ allow 2605:6400:20:104e::2;
 allow 2605:6400:20:170c::1;
 allow 2605:6400:20:1c01:7d33:a5db:c2b9:1092;
 allow 2605:6400:20:2417::69;
-allow 2605:6400:20:37f:1344:30e9:ce8e:dce5;
 allow 2605:6400:20:3ea:c2a3:1162:7224:e5df;
 allow 2605:6400:20:482:3920:1829:1839:1293;
 allow 2605:6400:20:be7::1;
@@ -1081,6 +1064,7 @@ allow 2620:18c:0:192::139;
 allow 2620:18c:0:192::140;
 allow 2620:18c:0:192::141;
 allow 2620:18c:0:192::142;
+allow 2620:18c:0:192::143;
 allow 2620:18c:0:192::144;
 allow 2620:18c:0:192::145;
 allow 2620:18c:0:192::146;
@@ -1207,7 +1191,6 @@ allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:4b9e::1;
 allow 2a04:52c0:108:a34f::1;
-allow 2a04:52c0:114:394f::1;
 allow 2a04:52c0:116:e0e3::1;
 allow 2a04:52c0:120:a13d::1;
 allow 2a04:52c0:130:896e::1;
@@ -1253,11 +1236,7 @@ allow 2a06:d380:0:103::63;
 allow 2a06:e80:3000:1:bad:babe:ca11:911;
 allow 2a07:e01:2:13::2;
 allow 2a07:e03:2a::bcde;
-allow 2a0a:3840:1337:127:0:b9c1:7f4c:1337;
-allow 2a0a:3840:1337:127:0:b9c1:7f58:1337;
 allow 2a0a:3840:8078:24:0:504e:18cf:1337;
-allow 2a0a:3840:8078:25:0:504e:1921:1337;
-allow 2a0a:3840:8078:27:0:504e:1b6c:1337;
 allow 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 allow 2a0a:4cc0:100:5b:64b9:56ff:fe85:2a11;
 allow 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
@@ -1473,10 +1452,6 @@ allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
 allow 2a0f:e586:f:f:9491:941d:caf5:50e7;
-allow 2a10:1fc0:1::1078:9b3b;
-allow 2a10:1fc0:1::9a01:890f;
-allow 2a10:1fc0:1::ac76:4d41;
-allow 2a10:1fc0:1::d717:cb95;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
@@ -1499,6 +1474,7 @@ allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
 allow 31.42.185.134;
+allow 34.235.106.92;
 allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.166.23;
@@ -1514,7 +1490,6 @@ allow 38.242.254.131;
 allow 38.97.116.244;
 allow 45.12.3.80;
 allow 45.128.232.151;
-allow 45.129.199.163;
 allow 45.130.20.250;
 allow 45.132.246.245;
 allow 45.134.225.36;
@@ -1565,7 +1540,6 @@ allow 45.79.50.161;
 allow 45.80.158.205;
 allow 45.80.158.27;
 allow 45.80.208.123;
-allow 45.8.22.207;
 allow 45.83.104.137;
 allow 45.83.31.10;
 allow 45.9.148.219;
@@ -1614,31 +1588,21 @@ allow 51.91.18.151;
 allow 5.196.73.12;
 allow 5.196.8.113;
 allow 5.196.95.34;
-allow 52.3.56.70;
-allow 5.255.100.151;
 allow 5.255.100.219;
 allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
-allow 5.255.101.79;
-allow 5.255.102.20;
 allow 5.255.103.190;
 allow 5.255.103.235;
-allow 5.255.105.181;
-allow 5.255.109.75;
 allow 5.255.111.64;
-allow 5.255.112.5;
 allow 5.255.115.42;
 allow 5.255.115.58;
 allow 5.255.117.56;
-allow 5.255.119.87;
-allow 5.255.120.20;
 allow 5.255.121.189;
 allow 5.255.124.150;
 allow 5.255.125.196;
 allow 5.255.125.41;
 allow 5.255.127.222;
-allow 5.255.127.36;
 allow 5.255.97.221;
 allow 5.255.98.151;
 allow 5.255.98.23;
@@ -1695,8 +1659,6 @@ allow 80.241.60.207;
 allow 80.67.167.81;
 allow 80.67.172.162;
 allow 80.78.24.207;
-allow 80.78.25.33;
-allow 80.78.27.108;
 allow 80.82.78.14;
 allow 81.16.33.42;
 allow 81.17.28.95;
@@ -1781,7 +1743,6 @@ allow 93.123.12.112;
 allow 93.243.56.177;
 allow 93.90.74.31;
 allow 93.95.225.141;
-allow 93.95.228.125;
 allow 93.95.228.205;
 allow 93.95.230.165;
 allow 93.95.230.54;
@@ -1798,10 +1759,6 @@ allow 94.103.124.46;
 allow 94.103.124.90;
 allow 94.103.124.91;
 allow 94.103.124.98;
-allow 94.131.111.196;
-allow 94.131.111.69;
-allow 94.131.111.73;
-allow 94.131.120.40;
 allow 94.140.115.63;
 allow 94.142.241.194;
 allow 94.142.244.16;
