--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -127,7 +127,6 @@ deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c03:e000:fa::2;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2600:3c07::f03c:94ff:fe12:513e;
-deny 2602:2e5::104;
 deny 2602:2e6:0:6::;
 deny 2602:fbf6:11:27::3;
 deny 2602:fc24:11:26c3::1;
@@ -138,13 +137,8 @@ deny 2602:fc24:12:4870:39ca:318:0:1;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:12:a679::1;
 deny 2602:fc24:18:148f::1;
-deny 2602:fc24:18:149a::1;
 deny 2602:fc24:18:1be9::1;
 deny 2602:fc24:18:1c54::1;
-deny 2602:fc24:18:2ed8::1;
-deny 2602:fc24:18:96e5::1;
-deny 2602:fc24:18:cb10::1;
-deny 2602:fc24:18:d21a::1;
 deny 2602:fccf:310:1::a;
 deny 2602:fef9:100:1100::199;
 deny 2603:3:6106:2460::;
@@ -175,7 +169,6 @@ deny 2605:6400:20:104e::2;
 deny 2605:6400:20:170c::1;
 deny 2605:6400:20:1c01:7d33:a5db:c2b9:1092;
 deny 2605:6400:20:2417::69;
-deny 2605:6400:20:37f:1344:30e9:ce8e:dce5;
 deny 2605:6400:20:3ea:c2a3:1162:7224:e5df;
 deny 2605:6400:20:482:3920:1829:1839:1293;
 deny 2605:6400:20:be7::1;
@@ -259,6 +252,7 @@ deny 2620:18c:0:192::139;
 deny 2620:18c:0:192::140;
 deny 2620:18c:0:192::141;
 deny 2620:18c:0:192::142;
+deny 2620:18c:0:192::143;
 deny 2620:18c:0:192::144;
 deny 2620:18c:0:192::145;
 deny 2620:18c:0:192::146;
@@ -384,7 +378,6 @@ deny 2a04:52c0:106:394::1;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:4b9e::1;
 deny 2a04:52c0:108:a34f::1;
-deny 2a04:52c0:114:394f::1;
 deny 2a04:52c0:116:e0e3::1;
 deny 2a04:52c0:120:a13d::1;
 deny 2a04:52c0:130:896e::1;
@@ -430,11 +423,7 @@ deny 2a06:d380:0:103::63;
 deny 2a06:e80:3000:1:bad:babe:ca11:911;
 deny 2a07:e01:2:13::2;
 deny 2a07:e03:2a::bcde;
-deny 2a0a:3840:1337:127:0:b9c1:7f4c:1337;
-deny 2a0a:3840:1337:127:0:b9c1:7f58:1337;
 deny 2a0a:3840:8078:24:0:504e:18cf:1337;
-deny 2a0a:3840:8078:25:0:504e:1921:1337;
-deny 2a0a:3840:8078:27:0:504e:1b6c:1337;
 deny 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 deny 2a0a:4cc0:100:5b:64b9:56ff:fe85:2a11;
 deny 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
@@ -650,10 +639,6 @@ deny 2a0f:df00:0:255::206;
 deny 2a0f:e586:f:f::133;
 deny 2a0f:e586:f:f::182;
 deny 2a0f:e586:f:f:9491:941d:caf5:50e7;
-deny 2a10:1fc0:1::1078:9b3b;
-deny 2a10:1fc0:1::9a01:890f;
-deny 2a10:1fc0:1::ac76:4d41;
-deny 2a10:1fc0:1::d717:cb95;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
 deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
