Update lists at 20240326-0600

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -113,7 +113,6 @@ deny 2001:67c:89c:702:1ce:1ce:babe:9;
 deny 2001:780:107:b::85;
 deny 2001:910:1400:107::2;
 deny 2001:9b1:c300:3044::610;
-deny 2001:b030:2422::7234;
 deny 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 deny 2001:bc8:1600:472a::1;
 deny 2001:bc8:700:9212::1;
@@ -265,6 +264,7 @@ deny 2800:ba0:6:c1::4858;
 deny 2a00:1169:119:b120::;
 deny 2a00:1169:11f:5200::;
 deny 2a00:1169:11f:d680::;
+deny 2a00:11c0:1c:311::5;
 deny 2a00:11c0:1f:1::55;
 deny 2a00:1728:3f::c0cc:80;
 deny 2a00:1728:f:f:f:f:c03c:9898;
@@ -317,7 +317,6 @@ deny 2a03:4000:37:3:e842:2ff:feb9:c49c;
 deny 2a03:4000:46:197:b434:d3ff:fe68:d9e1;
 deny 2a03:4000:48:4d:88c8:8eff:fee8:9d1a;
 deny 2a03:4000:5:65b:388a:15ff:fedc:30d6;
-deny 2a03:4000:56:91:480a:eeff:fea8:f9c6;
 deny 2a03:4000:6:102b:c457:f3ff:feb0:a6d0;
 deny 2a03:4000:62:8:c855:23ff:fef6:50ee;
 deny 2a03:4000:6:4015:8841:50ff:fe0d:719c;
