--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -6,7 +6,6 @@ allow 103.109.101.105;
 allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
-allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -88,7 +87,6 @@ allow 107.189.8.133;
 allow 107.189.8.181;
 allow 107.189.8.226;
 allow 107.189.8.238;
-allow 107.189.8.5;
 allow 107.189.8.56;
 allow 108.181.27.205;
 allow 108.181.69.243;
@@ -143,7 +141,6 @@ allow 149.202.79.129;
 allow 149.56.22.133;
 allow 149.56.44.47;
 allow 151.80.148.159;
-allow 152.53.35.204;
 allow 152.89.233.169;
 allow 154.16.116.61;
 allow 155.4.102.252;
@@ -553,7 +550,7 @@ allow 188.68.52.231;
 allow 190.103.179.98;
 allow 190.120.229.98;
 allow 190.211.254.97;
-allow 191.101.31.57;
+allow 191.101.31.49;
 allow 191.252.92.147;
 allow 191.96.165.34;
 allow 192.210.255.181;
@@ -633,6 +630,7 @@ allow 193.189.100.206;
 allow 193.218.118.133;
 allow 193.218.118.181;
 allow 193.218.118.182;
+allow 193.218.118.89;
 allow 193.218.118.91;
 allow 193.233.133.109;
 allow 193.239.232.102;
@@ -851,6 +849,7 @@ allow 212.69.167.80;
 allow 212.73.134.204;
 allow 212.95.50.77;
 allow 213.136.84.104;
+allow 213.156.142.30;
 allow 213.252.140.118;
 allow 213.95.149.22;
 allow 216.239.90.19;
@@ -916,6 +915,7 @@ allow 23.155.8.104;
 allow 23.184.48.101;
 allow 23.184.48.127;
 allow 23.184.48.128;
+allow 23.20.97.48;
 allow 23.94.211.25;
 allow 23.94.36.142;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
@@ -1000,7 +1000,6 @@ allow 2605:6400:30:f0ed:9151:66ed:6366:5c74;
 allow 2605:6400:30:f174::;
 allow 2605:6400:30:f174:1:1:1:1;
 allow 2605:6400:30:f174:1111:2222:3333:4444;
-allow 2605:6400:30:f174:1:2:3:4;
 allow 2605:6400:30:f174::42;
 allow 2605:6400:30:f174:42:42::;
 allow 2605:6400:30:f174:42:42:42:0;
@@ -1074,7 +1073,6 @@ allow 2800:ba0:6:c1::4858;
 allow 2a00:1169:119:b120::;
 allow 2a00:1169:11f:5200::;
 allow 2a00:1169:11f:d680::;
-allow 2a00:11c0:1c:311::5;
 allow 2a00:11c0:1f:1::55;
 allow 2a00:1728:3f::c0cc:80;
 allow 2a00:1728:f:f:f:f:c03c:9898;
@@ -1236,7 +1234,6 @@ allow 2a07:e01:2:13::2;
 allow 2a07:e03:2a::bcde;
 allow 2a0a:3840:8078:24:0:504e:18cf:1337;
 allow 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
-allow 2a0a:4cc0:100:5b:64b9:56ff:fe85:2a11;
 allow 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 allow 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
 allow 2a0b:f4c0:16c:10::1;
@@ -1450,6 +1447,7 @@ allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
 allow 2a0f:e586:f:f:9491:941d:caf5:50e7;
+allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
@@ -1480,7 +1478,6 @@ allow 37.120.239.59;
 allow 37.187.5.192;
 allow 37.228.129.128;
 allow 37.228.129.63;
-allow 37.252.255.135;
 allow 37.27.20.230;
 allow 37.48.120.196;
 allow 37.48.70.156;
@@ -1524,6 +1521,7 @@ allow 45.151.167.12;
 allow 45.151.167.13;
 allow 45.15.157.177;
 allow 45.15.158.165;
+allow 45.15.158.39;
 allow 45.56.81.190;
 allow 45.61.184.47;
 allow 45.61.185.172;
@@ -1609,7 +1607,6 @@ allow 5.2.67.226;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.39.25.229;
-allow 54.221.30.96;
 allow 54.224.79.94;
 allow 5.42.66.6;
 allow 5.42.80.232;
@@ -1731,6 +1728,7 @@ allow 91.219.237.56;
 allow 91.219.239.166;
 allow 91.92.109.126;
 allow 91.92.109.43;
+allow 92.119.126.161;
 allow 92.205.129.119;
 allow 92.205.31.137;
 allow 92.243.24.163;
@@ -1762,6 +1760,7 @@ allow 94.142.241.194;
 allow 94.142.244.16;
 allow 94.16.112.22;
 allow 94.16.116.81;
+allow 94.16.116.86;
 allow 94.16.121.226;
 allow 94.16.121.91;
 allow 94.177.106.37;
