--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -91,6 +91,7 @@ set_real_ip_from 2001:67c:6ec:203:192:42:116:221;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5513;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5514;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5515;
+set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5517;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5518;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5520;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5523;
