Update lists at 20240328-0300

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -95,6 +95,7 @@ allow 2001:67c:6ec:203:218:33ff:fe44:5515;
 allow 2001:67c:6ec:203:218:33ff:fe44:5517;
 allow 2001:67c:6ec:203:218:33ff:fe44:5518;
 allow 2001:67c:6ec:203:218:33ff:fe44:5520;
+allow 2001:67c:6ec:203:218:33ff:fe44:5523;
 allow 2001:67c:6ec:203:218:33ff:fe44:5524;
 allow 2001:67c:6ec:203:218:33ff:fe44:5525;
 allow 2001:67c:6ec:203:218:33ff:fe44:5526;
@@ -296,6 +297,7 @@ allow 2a01:4262:1ab:ffff::133;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
+allow 2a01:7a7:2:3c17:216:3cff:fe40:efc;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a01:7e00::f03c:93ff:fef8:bd9b;
@@ -665,7 +667,6 @@ allow 2a12:5940:52c2::2;
 allow 2a12:5940:9101::2;
 allow 2a12:5940:b4db::2;
 allow 2a12:5940:b4dd::2;
-allow 2a12:5940:c80b::2;
 allow 2a12:5940:c814::2;
 allow 2a12:5940:c826::2;
 allow 2a12:5940:d0e2::2;
