--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -95,6 +95,7 @@ deny 2001:67c:6ec:203:218:33ff:fe44:5515;
 deny 2001:67c:6ec:203:218:33ff:fe44:5517;
 deny 2001:67c:6ec:203:218:33ff:fe44:5518;
 deny 2001:67c:6ec:203:218:33ff:fe44:5520;
+deny 2001:67c:6ec:203:218:33ff:fe44:5523;
 deny 2001:67c:6ec:203:218:33ff:fe44:5524;
 deny 2001:67c:6ec:203:218:33ff:fe44:5525;
 deny 2001:67c:6ec:203:218:33ff:fe44:5526;
@@ -296,6 +297,7 @@ deny 2a01:4262:1ab:ffff::133;
 deny 2a01:5e0:36:cf2a::1;
 deny 2a01:6340:2:501::10;
 deny 2a01:6340:2:501::20;
+deny 2a01:7a7:2:3c17:216:3cff:fe40:efc;
 deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a01:7e00::f03c:93ff:fef8:bd9b;
@@ -665,7 +667,6 @@ deny 2a12:5940:52c2::2;
 deny 2a12:5940:9101::2;
 deny 2a12:5940:b4db::2;
 deny 2a12:5940:b4dd::2;
-deny 2a12:5940:c80b::2;
 deny 2a12:5940:c814::2;
 deny 2a12:5940:c826::2;
 deny 2a12:5940:d0e2::2;
