--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -24,7 +24,6 @@ deny 2001:41d0:a:fe22::1;
 deny 2001:41d0:e:70c::1;
 deny 2001:470:1:908::9001;
 deny 2001:4b20:12:f001::105;
-deny 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
 deny 2001:4b98:dc0:47:216:3eff:fe3d:888c;
 deny 2001:620:20d0::19;
 deny 2001:620:20d0::20;
@@ -110,7 +109,6 @@ deny 2001:67c:89c:702:1ce:1ce:babe:6;
 deny 2001:67c:89c:702:1ce:1ce:babe:7;
 deny 2001:67c:89c:702:1ce:1ce:babe:8;
 deny 2001:67c:89c:702:1ce:1ce:babe:9;
-deny 2001:780:107:b::85;
 deny 2001:910:1400:107::2;
 deny 2001:9b1:c300:3044::610;
 deny 2001:b030:2422::7234;
@@ -125,6 +123,7 @@ deny 2600:3c00:e000:4ee::2;
 deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c03:e000:fa::3;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
+deny 2602:2e5::104;
 deny 2602:2e6:0:6::;
 deny 2602:fc24:11:4441::1;
 deny 2602:fc24:11:96f9::1;
