--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -139,6 +139,7 @@ allow 149.202.79.129;
 allow 149.56.22.133;
 allow 149.56.44.47;
 allow 151.80.148.159;
+allow 152.53.35.204;
 allow 152.89.233.169;
 allow 154.16.116.61;
 allow 155.138.161.171;
@@ -192,7 +193,6 @@ allow 176.121.81.51;
 allow 176.126.253.190;
 allow 176.58.100.98;
 allow 176.58.121.177;
-allow 176.58.89.182;
 allow 178.170.37.11;
 allow 178.17.170.184;
 allow 178.17.170.23;
@@ -710,6 +710,7 @@ allow 2001:41d0:a:fe22::1;
 allow 2001:41d0:e:70c::1;
 allow 2001:470:1:908::9001;
 allow 2001:4b20:12:f001::105;
+allow 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
 allow 2001:4b98:dc0:47:216:3eff:fe3d:888c;
 allow 2001:620:20d0::19;
 allow 2001:620:20d0::20;
@@ -902,7 +903,6 @@ allow 23.137.249.8;
 allow 23.137.250.34;
 allow 23.137.250.83;
 allow 23.137.253.9;
-allow 23.152.24.77;
 allow 23.154.177.10;
 allow 23.154.177.11;
 allow 23.154.177.12;
@@ -1267,6 +1267,7 @@ allow 2a07:e01:2:13::2;
 allow 2a07:e03:2a::bcde;
 allow 2a0a:3840:8078:24:0:504e:18cf:1337;
 allow 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
+allow 2a0a:4cc0:100:5b:64b9:56ff:fe85:2a11;
 allow 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 allow 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
 allow 2a0b:f4c0:16c:10::1;
@@ -1502,7 +1503,6 @@ allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
 allow 31.42.185.134;
-allow 34.207.8.116;
 allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.166.23;
@@ -1578,8 +1578,6 @@ allow 45.92.1.74;
 allow 45.94.31.143;
 allow 45.94.31.180;
 allow 45.95.169.184;
-allow 45.95.169.223;
-allow 45.95.169.224;
 allow 45.95.169.228;
 allow 45.95.169.255;
 allow 46.166.139.111;
@@ -1635,6 +1633,7 @@ allow 5.255.99.124;
 allow 5.255.99.147;
 allow 5.255.99.5;
 allow 5.2.67.226;
+allow 52.73.6.170;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.39.25.229;
@@ -1760,6 +1759,7 @@ allow 91.92.109.43;
 allow 92.119.126.161;
 allow 92.205.129.119;
 allow 92.205.31.137;
+allow 92.243.24.163;
 allow 92.246.84.133;
 allow 92.249.48.135;
 allow 93.123.12.112;
