--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -139,6 +139,7 @@ deny 149.202.79.129;
 deny 149.56.22.133;
 deny 149.56.44.47;
 deny 151.80.148.159;
+deny 152.53.35.204;
 deny 152.89.233.169;
 deny 154.16.116.61;
 deny 155.138.161.171;
@@ -192,7 +193,6 @@ deny 176.121.81.51;
 deny 176.126.253.190;
 deny 176.58.100.98;
 deny 176.58.121.177;
-deny 176.58.89.182;
 deny 178.170.37.11;
 deny 178.17.170.184;
 deny 178.17.170.23;
@@ -710,6 +710,7 @@ deny 2001:41d0:a:fe22::1;
 deny 2001:41d0:e:70c::1;
 deny 2001:470:1:908::9001;
 deny 2001:4b20:12:f001::105;
+deny 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
 deny 2001:4b98:dc0:47:216:3eff:fe3d:888c;
 deny 2001:620:20d0::19;
 deny 2001:620:20d0::20;
@@ -902,7 +903,6 @@ deny 23.137.249.8;
 deny 23.137.250.34;
 deny 23.137.250.83;
 deny 23.137.253.9;
-deny 23.152.24.77;
 deny 23.154.177.10;
 deny 23.154.177.11;
 deny 23.154.177.12;
@@ -1267,6 +1267,7 @@ deny 2a07:e01:2:13::2;
 deny 2a07:e03:2a::bcde;
 deny 2a0a:3840:8078:24:0:504e:18cf:1337;
 deny 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
+deny 2a0a:4cc0:100:5b:64b9:56ff:fe85:2a11;
 deny 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 deny 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
 deny 2a0b:f4c0:16c:10::1;
@@ -1502,7 +1503,6 @@ deny 31.129.22.65;
 deny 31.220.87.46;
 deny 31.220.98.139;
 deny 31.42.185.134;
-deny 34.207.8.116;
 deny 35.0.127.52;
 deny 37.1.201.144;
 deny 37.120.166.23;
@@ -1578,8 +1578,6 @@ deny 45.92.1.74;
 deny 45.94.31.143;
 deny 45.94.31.180;
 deny 45.95.169.184;
-deny 45.95.169.223;
-deny 45.95.169.224;
 deny 45.95.169.228;
 deny 45.95.169.255;
 deny 46.166.139.111;
@@ -1635,6 +1633,7 @@ deny 5.255.99.124;
 deny 5.255.99.147;
 deny 5.255.99.5;
 deny 5.2.67.226;
+deny 52.73.6.170;
 deny 5.2.79.179;
 deny 5.2.79.190;
 deny 5.39.25.229;
@@ -1760,6 +1759,7 @@ deny 91.92.109.43;
 deny 92.119.126.161;
 deny 92.205.129.119;
 deny 92.205.31.137;
+deny 92.243.24.163;
 deny 92.246.84.133;
 deny 92.249.48.135;
 deny 93.123.12.112;
