--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -24,6 +24,7 @@ deny 2001:41d0:a:fe22::1;
 deny 2001:41d0:e:70c::1;
 deny 2001:470:1:908::9001;
 deny 2001:4b20:12:f001::105;
+deny 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
 deny 2001:4b98:dc0:47:216:3eff:fe3d:888c;
 deny 2001:620:20d0::19;
 deny 2001:620:20d0::20;
@@ -441,6 +442,7 @@ deny 2a07:e01:2:13::2;
 deny 2a07:e03:2a::bcde;
 deny 2a0a:3840:8078:24:0:504e:18cf:1337;
 deny 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
+deny 2a0a:4cc0:100:5b:64b9:56ff:fe85:2a11;
 deny 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 deny 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
 deny 2a0b:f4c0:16c:10::1;
