--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -90,6 +90,7 @@ allow 108.181.27.205;
 allow 108.181.69.243;
 allow 108.61.189.136;
 allow 109.104.153.22;
+allow 109.107.190.171;
 allow 109.169.33.163;
 allow 109.201.133.100;
 allow 109.69.67.17;
@@ -193,6 +194,7 @@ allow 176.121.81.51;
 allow 176.126.253.190;
 allow 176.58.100.98;
 allow 176.58.121.177;
+allow 176.58.89.182;
 allow 178.170.37.11;
 allow 178.17.170.184;
 allow 178.17.170.23;
@@ -226,6 +228,7 @@ allow 179.43.182.232;
 allow 179.43.182.58;
 allow 180.150.226.99;
 allow 184.105.48.40;
+allow 184.73.15.251;
 allow 185.100.85.132;
 allow 185.100.85.22;
 allow 185.100.85.23;
@@ -631,6 +634,7 @@ allow 193.218.118.188;
 allow 193.218.118.89;
 allow 193.218.118.91;
 allow 193.233.133.109;
+allow 193.233.233.124;
 allow 193.239.232.102;
 allow 193.239.232.230;
 allow 193.26.115.43;
@@ -796,6 +800,7 @@ allow 2001:67c:89c:702:1ce:1ce:babe:6;
 allow 2001:67c:89c:702:1ce:1ce:babe:7;
 allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
+allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
 allow 2001:9b1:c300:3044::610;
 allow 2001:b030:2422::7234;
@@ -848,6 +853,7 @@ allow 212.95.50.77;
 allow 213.136.84.104;
 allow 213.156.142.30;
 allow 213.252.140.118;
+allow 213.95.149.22;
 allow 216.239.90.19;
 allow 216.73.159.101;
 allow 216.73.159.75;
@@ -1489,6 +1495,8 @@ allow 2a12:1e01::2;
 allow 2a12:5940:13e2::2;
 allow 2a12:5940:144f::2;
 allow 2a12:5940:52c2::2;
+allow 2a12:5940:53f7::2;
+allow 2a12:5940:7515::2;
 allow 2a12:5940:9101::2;
 allow 2a12:5940:b4db::2;
 allow 2a12:5940:b4dd::2;
@@ -1633,7 +1641,6 @@ allow 5.255.99.124;
 allow 5.255.99.147;
 allow 5.255.99.5;
 allow 5.2.67.226;
-allow 52.73.6.170;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.39.25.229;
@@ -1666,6 +1673,7 @@ allow 74.82.47.194;
 allow 77.105.146.42;
 allow 77.220.196.253;
 allow 77.232.143.248;
+allow 77.48.28.193;
 allow 77.48.28.239;
 allow 77.81.247.72;
 allow 77.91.85.147;
@@ -1813,5 +1821,4 @@ allow 95.211.210.103;
 allow 95.211.244.28;
 allow 95.211.7.148;
 allow 96.27.198.133;
-allow 96.42.26.63;
 allow 96.66.15.152;
