--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -107,6 +107,7 @@ allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
 allow 114.199.75.111;
+allow 118.163.74.160;
 allow 123.253.35.32;
 allow 125.212.241.131;
 allow 128.31.0.13;
@@ -210,7 +211,6 @@ allow 178.218.144.96;
 allow 178.218.144.99;
 allow 178.236.247.122;
 allow 179.43.128.16;
-allow 179.43.159.194;
 allow 179.43.159.195;
 allow 179.43.159.196;
 allow 179.43.159.197;
@@ -224,7 +224,6 @@ allow 179.43.182.232;
 allow 179.43.182.58;
 allow 180.150.226.99;
 allow 184.105.48.40;
-allow 184.73.44.61;
 allow 185.100.85.132;
 allow 185.100.85.22;
 allow 185.100.85.23;
@@ -521,6 +520,7 @@ allow 185.246.188.67;
 allow 185.246.188.73;
 allow 185.246.188.74;
 allow 185.246.189.99;
+allow 185.246.86.197;
 allow 185.247.184.105;
 allow 185.247.184.33;
 allow 185.252.232.218;
@@ -709,6 +709,7 @@ allow 2001:41d0:a:fe22::1;
 allow 2001:41d0:e:70c::1;
 allow 2001:470:1:908::9001;
 allow 2001:4b20:12:f001::105;
+allow 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
 allow 2001:4b98:dc0:47:216:3eff:fe3d:888c;
 allow 2001:620:20d0::19;
 allow 2001:620:20d0::20;
@@ -797,6 +798,7 @@ allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
 allow 2001:9b1:c300:3044::610;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
@@ -806,8 +808,8 @@ allow 200.25.27.112;
 allow 201.137.12.46;
 allow 202.61.226.98;
 allow 202.61.252.121;
-allow 202.69.76.36;
 allow 204.137.14.104;
+allow 204.137.14.105;
 allow 204.137.14.106;
 allow 204.137.14.92;
 allow 204.194.29.4;
@@ -1264,7 +1266,6 @@ allow 2a06:d380:0:103::63;
 allow 2a06:e80:3000:1:bad:babe:ca11:911;
 allow 2a07:e01:2:13::2;
 allow 2a07:e03:2a::bcde;
-allow 2a0a:3840:8078:24:0:504e:18cf:1337;
 allow 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 allow 2a0a:4cc0:100:5b:64b9:56ff:fe85:2a11;
 allow 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
@@ -1491,6 +1492,7 @@ allow 2a12:5940:144f::2;
 allow 2a12:5940:52c2::2;
 allow 2a12:5940:9101::2;
 allow 2a12:5940:b4db::2;
+allow 2a12:5940:b4dd::2;
 allow 2a12:5940:c814::2;
 allow 2a12:5940:c826::2;
 allow 2a12:5940:d0e2::2;
@@ -1612,6 +1614,7 @@ allow 51.91.18.151;
 allow 5.196.73.12;
 allow 5.196.8.113;
 allow 5.196.95.34;
+allow 52.54.195.50;
 allow 5.255.100.219;
 allow 5.255.100.26;
 allow 5.255.101.10;
@@ -1641,6 +1644,7 @@ allow 54.224.79.94;
 allow 5.42.66.6;
 allow 5.42.80.232;
 allow 5.42.80.233;
+allow 5.42.80.234;
 allow 5.42.80.235;
 allow 54.36.101.21;
 allow 54.36.108.162;
@@ -1678,7 +1682,6 @@ allow 80.210.78.252;
 allow 80.241.60.207;
 allow 80.67.167.81;
 allow 80.67.172.162;
-allow 80.78.24.207;
 allow 80.82.78.14;
 allow 81.16.33.42;
 allow 81.17.28.95;
@@ -1755,9 +1758,9 @@ allow 91.219.237.56;
 allow 91.219.239.166;
 allow 91.92.109.126;
 allow 91.92.109.43;
-allow 92.119.126.161;
 allow 92.205.129.119;
 allow 92.205.31.137;
+allow 92.243.24.163;
 allow 92.246.84.133;
 allow 92.249.48.135;
 allow 93.123.12.112;
