Update lists at 20240330-0600

--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -15,6 +15,8 @@ deny 103.251.167.20;
 deny 103.253.24.18;
 deny 103.28.52.93;
 deny 104.167.242.116;
+deny 104.167.242.117;
+deny 104.167.242.118;
 deny 104.192.1.138;
 deny 104.192.171.138;
 deny 104.192.3.74;
@@ -534,6 +536,7 @@ deny 185.42.170.203;
 deny 185.56.171.94;
 deny 185.56.83.83;
 deny 185.67.82.114;
+deny 185.70.8.45;
 deny 185.70.8.46;
 deny 185.7.33.146;
 deny 185.82.219.109;
@@ -640,6 +643,7 @@ deny 193.35.18.77;
 deny 194.15.112.133;
 deny 194.15.113.118;
 deny 194.15.115.212;
+deny 194.163.157.49;
 deny 194.195.120.132;
 deny 194.233.174.56;
 deny 194.26.192.64;
@@ -942,9 +946,9 @@ deny 2.58.56.220;
 deny 2.58.56.248;
 deny 2.58.56.43;
 deny 2.58.56.90;
-deny 2600:3c00:e000:4ee::2;
+deny 2600:3c00:e000:4ee::3;
 deny 2600:3c00::f03c:91ff:fe96:1cd9;
-deny 2600:3c03:e000:fa::3;
+deny 2600:3c03:e000:fa::1;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2602:2e6:0:6::;
 deny 2602:fc24:11:4441::1;
@@ -959,6 +963,8 @@ deny 2602:fc24:18:1be9::1;
 deny 2602:fc24:18:1c54::1;
 deny 2602:fc24:19:95b7::1;
 deny 2602:fccf:310:1::a;
+deny 2602:fccf:310:1::b;
+deny 2602:fccf:310:1::c;
 deny 2602:fef9:100:1100::199;
 deny 2603:3:6106:2460::;
 deny 2603:3:6107:47a0::;
@@ -1100,7 +1106,6 @@ deny 2620:95:4007::111;
 deny 27.255.75.198;
 deny 2800:ba0:6:c1::4858;
 deny 2a00:1169:119:b120::;
-deny 2a00:1169:11f:5200::;
 deny 2a00:1169:11f:d680::;
 deny 2a00:11c0:1f:1::55;
 deny 2a00:1728:3f::c0cc:80;
@@ -1117,7 +1122,6 @@ deny 2a01:4262:1ab:ffff::133;
 deny 2a01:5e0:36:cf2a::1;
 deny 2a01:6340:2:501::10;
 deny 2a01:6340:2:501::20;
-deny 2a01:7a7:2:3c17:216:3cff:fe40:efc;
 deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a01:7e00::f03c:93ff:fef8:bd9b;
@@ -1221,6 +1225,7 @@ deny 2a04:52c0:120:a13d::1;
 deny 2a04:52c0:130:896e::1;
 deny 2a04:52c0:130:d285::1;
 deny 2a04:9dc0:31::c0cc:4d;
+deny 2a05:26c0:d1:12:acdc:feed:beef:66;
 deny 2a05:26c0:d1:12:acdc:feed:beef:99;
 deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
@@ -1499,7 +1504,6 @@ deny 31.220.87.46;
 deny 31.220.98.139;
 deny 31.42.185.134;
 deny 35.0.127.52;
-deny 35.173.12.207;
 deny 37.1.201.144;
 deny 37.120.166.23;
 deny 37.120.188.156;
@@ -1511,6 +1515,7 @@ deny 37.48.120.196;
 deny 37.48.70.156;
 deny 38.242.254.131;
 deny 38.97.116.244;
+deny 44.221.195.160;
 deny 45.12.3.80;
 deny 45.128.232.151;
 deny 45.130.20.250;
@@ -1567,7 +1572,6 @@ deny 45.80.158.27;
 deny 45.80.208.123;
 deny 45.8.22.207;
 deny 45.83.104.137;
-deny 45.83.31.10;
 deny 45.9.148.219;
 deny 45.9.150.103;
 deny 45.9.150.130;
@@ -1579,13 +1583,13 @@ deny 45.95.169.255;
 deny 46.166.139.111;
 deny 46.182.21.248;
 deny 46.182.21.250;
+deny 46.195.121.121;
 deny 46.226.164.14;
 deny 46.232.251.191;
 deny 46.234.47.105;
 deny 46.38.255.27;
 deny 47.243.103.140;
 deny 47.243.74.136;
-deny 50.3.182.133;
 deny 50.3.182.156;
 deny 51.15.249.160;
 deny 51.15.59.15;
@@ -1668,7 +1672,6 @@ deny 77.91.85.147;
 deny 77.91.86.95;
 deny 77.91.87.79;
 deny 78.142.18.219;
-deny 79.102.34.26;
 deny 79.124.8.241;
 deny 79.137.198.213;
 deny 80.210.78.252;
@@ -1752,9 +1755,7 @@ deny 91.219.237.56;
 deny 91.219.239.166;
 deny 91.92.109.126;
 deny 91.92.109.43;
-deny 92.119.126.161;
 deny 92.205.129.119;
-deny 92.205.31.137;
 deny 92.243.24.163;
 deny 92.246.84.133;
 deny 92.249.48.135;
