--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -15,6 +15,8 @@ allow 103.251.167.20;
 allow 103.253.24.18;
 allow 103.28.52.93;
 allow 104.167.242.116;
+allow 104.167.242.117;
+allow 104.167.242.118;
 allow 104.192.1.138;
 allow 104.192.171.138;
 allow 104.192.3.74;
@@ -534,6 +536,7 @@ allow 185.42.170.203;
 allow 185.56.171.94;
 allow 185.56.83.83;
 allow 185.67.82.114;
+allow 185.70.8.45;
 allow 185.70.8.46;
 allow 185.7.33.146;
 allow 185.82.219.109;
@@ -640,6 +643,7 @@ allow 193.35.18.77;
 allow 194.15.112.133;
 allow 194.15.113.118;
 allow 194.15.115.212;
+allow 194.163.157.49;
 allow 194.195.120.132;
 allow 194.233.174.56;
 allow 194.26.192.64;
@@ -942,9 +946,9 @@ allow 2.58.56.220;
 allow 2.58.56.248;
 allow 2.58.56.43;
 allow 2.58.56.90;
-allow 2600:3c00:e000:4ee::2;
+allow 2600:3c00:e000:4ee::3;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
-allow 2600:3c03:e000:fa::3;
+allow 2600:3c03:e000:fa::1;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2602:2e6:0:6::;
 allow 2602:fc24:11:4441::1;
@@ -959,6 +963,8 @@ allow 2602:fc24:18:1be9::1;
 allow 2602:fc24:18:1c54::1;
 allow 2602:fc24:19:95b7::1;
 allow 2602:fccf:310:1::a;
+allow 2602:fccf:310:1::b;
+allow 2602:fccf:310:1::c;
 allow 2602:fef9:100:1100::199;
 allow 2603:3:6106:2460::;
 allow 2603:3:6107:47a0::;
@@ -1100,7 +1106,6 @@ allow 2620:95:4007::111;
 allow 27.255.75.198;
 allow 2800:ba0:6:c1::4858;
 allow 2a00:1169:119:b120::;
-allow 2a00:1169:11f:5200::;
 allow 2a00:1169:11f:d680::;
 allow 2a00:11c0:1f:1::55;
 allow 2a00:1728:3f::c0cc:80;
@@ -1117,7 +1122,6 @@ allow 2a01:4262:1ab:ffff::133;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
-allow 2a01:7a7:2:3c17:216:3cff:fe40:efc;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a01:7e00::f03c:93ff:fef8:bd9b;
@@ -1221,6 +1225,7 @@ allow 2a04:52c0:120:a13d::1;
 allow 2a04:52c0:130:896e::1;
 allow 2a04:52c0:130:d285::1;
 allow 2a04:9dc0:31::c0cc:4d;
+allow 2a05:26c0:d1:12:acdc:feed:beef:66;
 allow 2a05:26c0:d1:12:acdc:feed:beef:99;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
@@ -1499,7 +1504,6 @@ allow 31.220.87.46;
 allow 31.220.98.139;
 allow 31.42.185.134;
 allow 35.0.127.52;
-allow 35.173.12.207;
 allow 37.1.201.144;
 allow 37.120.166.23;
 allow 37.120.188.156;
@@ -1511,6 +1515,7 @@ allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.242.254.131;
 allow 38.97.116.244;
+allow 44.221.195.160;
 allow 45.12.3.80;
 allow 45.128.232.151;
 allow 45.130.20.250;
@@ -1567,7 +1572,6 @@ allow 45.80.158.27;
 allow 45.80.208.123;
 allow 45.8.22.207;
 allow 45.83.104.137;
-allow 45.83.31.10;
 allow 45.9.148.219;
 allow 45.9.150.103;
 allow 45.9.150.130;
@@ -1579,13 +1583,13 @@ allow 45.95.169.255;
 allow 46.166.139.111;
 allow 46.182.21.248;
 allow 46.182.21.250;
+allow 46.195.121.121;
 allow 46.226.164.14;
 allow 46.232.251.191;
 allow 46.234.47.105;
 allow 46.38.255.27;
 allow 47.243.103.140;
 allow 47.243.74.136;
-allow 50.3.182.133;
 allow 50.3.182.156;
 allow 51.15.249.160;
 allow 51.15.59.15;
@@ -1668,7 +1672,6 @@ allow 77.91.85.147;
 allow 77.91.86.95;
 allow 77.91.87.79;
 allow 78.142.18.219;
-allow 79.102.34.26;
 allow 79.124.8.241;
 allow 79.137.198.213;
 allow 80.210.78.252;
@@ -1752,9 +1755,7 @@ allow 91.219.237.56;
 allow 91.219.239.166;
 allow 91.92.109.126;
 allow 91.92.109.43;
-allow 92.119.126.161;
 allow 92.205.129.119;
-allow 92.205.31.137;
 allow 92.243.24.163;
 allow 92.246.84.133;
 allow 92.249.48.135;
