--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -7,7 +7,6 @@ deny 103.109.101.105;
 deny 103.126.161.54;
 deny 103.129.222.46;
 deny 103.163.218.11;
-deny 103.174.253.222;
 deny 103.193.179.233;
 deny 103.196.37.111;
 deny 103.208.86.5;
@@ -931,6 +930,7 @@ deny 23.154.177.7;
 deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.24.6;
+deny 23.155.8.104;
 deny 23.184.48.101;
 deny 23.184.48.127;
 deny 23.184.48.128;
@@ -950,6 +950,7 @@ deny 2600:3c00:e000:4ee::3;
 deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c03:e000:fa::1;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
+deny 2602:2e5::104;
 deny 2602:2e6:0:6::;
 deny 2602:fc24:11:4441::1;
 deny 2602:fc24:11:96f9::1;
@@ -1122,6 +1123,7 @@ deny 2a01:4262:1ab:ffff::133;
 deny 2a01:5e0:36:cf2a::1;
 deny 2a01:6340:2:501::10;
 deny 2a01:6340:2:501::20;
+deny 2a01:7a7:2:3c17:216:3cff:fe40:efc;
 deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a01:7e00::f03c:93ff:fef8:bd9b;
@@ -1503,6 +1505,7 @@ deny 31.129.22.65;
 deny 31.220.87.46;
 deny 31.220.98.139;
 deny 31.42.185.134;
+deny 34.196.143.7;
 deny 35.0.127.52;
 deny 37.1.201.144;
 deny 37.120.166.23;
@@ -1515,7 +1518,6 @@ deny 37.48.120.196;
 deny 37.48.70.156;
 deny 38.242.254.131;
 deny 38.97.116.244;
-deny 3.94.147.232;
 deny 45.12.3.80;
 deny 45.128.232.151;
 deny 45.130.20.250;
@@ -1528,7 +1530,6 @@ deny 45.138.16.113;
 deny 45.138.16.203;
 deny 45.138.16.222;
 deny 45.138.16.230;
-deny 45.138.16.240;
 deny 45.138.16.249;
 deny 45.138.16.42;
 deny 45.138.16.76;
@@ -1757,6 +1758,7 @@ deny 91.219.237.56;
 deny 91.219.239.166;
 deny 91.92.109.126;
 deny 91.92.109.43;
+deny 92.119.126.161;
 deny 92.205.129.119;
 deny 92.243.24.163;
 deny 92.246.84.133;
