--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -308,6 +308,8 @@ allow 2a02:13f0:8100:6:205:ce4a:e2d2:1;
 allow 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 allow 2a02:13f0:8100:6:6bc:499d:b353:1;
 allow 2a02:16d0:0:5::1;
+allow 2a02:2970:1001::4b;
+allow 2a02:2970:1001::4c;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
 allow 2a02:7aa0:1619::ba45:e7f2;
@@ -634,7 +636,6 @@ allow 2a0d:3e83:1:b284::1;
 allow 2a0d:c2c0:1:4::2;
 allow 2a0e:97c0:470::30;
 allow 2a0e:d602:1:14bc::2;
-allow 2a0e:d602:2:2a2::2;
 allow 2a0e:d602:2:55f::2;
 allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:d0::1;
