Update lists at 20240401-0000

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -19,7 +19,6 @@ allow 2001:41d0:701:1100::4434;
 allow 2001:41d0:701:1100::4f60;
 allow 2001:41d0:800:1f70::;
 allow 2001:41d0:801:2000::15bb;
-allow 2001:41d0:a:5c0::1;
 allow 2001:41d0:a:fe22::1;
 allow 2001:41d0:e:70c::1;
 allow 2001:470:1:908::9001;
@@ -265,6 +264,7 @@ allow 2620:18c:0:192::214;
 allow 2620:18c:0:192::215;
 allow 2620:18c:0:192::216;
 allow 2620:18c:0:192::217;
+allow 2620:18c:0:192::218;
 allow 2620:18c:0:192::219;
 allow 2620:18c:0:192::220;
 allow 2620:18c:0:192::221;
@@ -333,6 +333,8 @@ allow 2a03:4000:2b:66e:dead:beef:ca1f:1337;
 allow 2a03:4000:37:3:e842:2ff:feb9:c49c;
 allow 2a03:4000:46:197:b434:d3ff:fe68:d9e1;
 allow 2a03:4000:48:4d:88c8:8eff:fee8:9d1a;
+allow 2a03:4000:55:efb::1003;
+allow 2a03:4000:55:efb::a1;
 allow 2a03:4000:5:65b:388a:15ff:fedc:30d6;
 allow 2a03:4000:56:91:480a:eeff:fea8:f9c6;
 allow 2a03:4000:6:102b:c457:f3ff:feb0:a6d0;
@@ -341,6 +343,7 @@ allow 2a03:4000:6:4015:8841:50ff:fe0d:719c;
 allow 2a03:4000:6:614:d803:40ff:fec3:832a;
 allow 2a03:4000:66:15:18a0:6bff:fe90:3147;
 allow 2a03:4000:66:d88:6469:50ff:fe0b:98a8;
+allow 2a03:4000:6:b136::4;
 allow 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 allow 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
 allow 2a03:6f20:531::254;
