--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -7,7 +7,6 @@ set_real_ip_from 103.109.101.105;
 set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.129.222.46;
 set_real_ip_from 103.163.218.11;
-set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.196.37.111;
 set_real_ip_from 103.208.86.5;
@@ -117,7 +116,6 @@ set_real_ip_from 130.193.15.79;
 set_real_ip_from 135.125.205.25;
 set_real_ip_from 136.244.111.163;
 set_real_ip_from 137.63.71.51;
-set_real_ip_from 138.128.222.68;
 set_real_ip_from 138.59.18.110;
 set_real_ip_from 139.99.172.11;
 set_real_ip_from 141.239.149.94;
@@ -486,7 +484,6 @@ set_real_ip_from 185.227.134.106;
 set_real_ip_from 185.227.68.78;
 set_real_ip_from 185.233.100.23;
 set_real_ip_from 185.235.146.29;
-set_real_ip_from 185.239.71.160;
 set_real_ip_from 185.241.208.115;
 set_real_ip_from 185.241.208.196;
 set_real_ip_from 185.241.208.202;
@@ -706,7 +703,6 @@ set_real_ip_from 2001:41d0:701:1100::4434;
 set_real_ip_from 2001:41d0:701:1100::4f60;
 set_real_ip_from 2001:41d0:800:1f70::;
 set_real_ip_from 2001:41d0:801:2000::15bb;
-set_real_ip_from 2001:41d0:a:5c0::1;
 set_real_ip_from 2001:41d0:a:fe22::1;
 set_real_ip_from 2001:41d0:e:70c::1;
 set_real_ip_from 2001:470:1:908::9001;
@@ -811,6 +807,7 @@ set_real_ip_from 2001:bf0:666::666;
 set_real_ip_from 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
 set_real_ip_from 200.25.27.112;
 set_real_ip_from 202.61.226.98;
+set_real_ip_from 202.61.252.121;
 set_real_ip_from 202.69.76.36;
 set_real_ip_from 204.137.14.104;
 set_real_ip_from 204.137.14.105;
@@ -829,6 +826,7 @@ set_real_ip_from 205.185.121.170;
 set_real_ip_from 205.185.123.93;
 set_real_ip_from 205.185.124.176;
 set_real_ip_from 205.185.124.193;
+set_real_ip_from 206.237.98.52;
 set_real_ip_from 208.109.215.188;
 set_real_ip_from 208.109.36.224;
 set_real_ip_from 209.141.32.198;
@@ -883,6 +881,7 @@ set_real_ip_from 23.129.64.214;
 set_real_ip_from 23.129.64.215;
 set_real_ip_from 23.129.64.216;
 set_real_ip_from 23.129.64.217;
+set_real_ip_from 23.129.64.218;
 set_real_ip_from 23.129.64.219;
 set_real_ip_from 23.129.64.220;
 set_real_ip_from 23.129.64.221;
@@ -1084,6 +1083,7 @@ set_real_ip_from 2620:18c:0:192::214;
 set_real_ip_from 2620:18c:0:192::215;
 set_real_ip_from 2620:18c:0:192::216;
 set_real_ip_from 2620:18c:0:192::217;
+set_real_ip_from 2620:18c:0:192::218;
 set_real_ip_from 2620:18c:0:192::219;
 set_real_ip_from 2620:18c:0:192::220;
 set_real_ip_from 2620:18c:0:192::221;
@@ -1153,6 +1153,8 @@ set_real_ip_from 2a03:4000:2b:66e:dead:beef:ca1f:1337;
 set_real_ip_from 2a03:4000:37:3:e842:2ff:feb9:c49c;
 set_real_ip_from 2a03:4000:46:197:b434:d3ff:fe68:d9e1;
 set_real_ip_from 2a03:4000:48:4d:88c8:8eff:fee8:9d1a;
+set_real_ip_from 2a03:4000:55:efb::1003;
+set_real_ip_from 2a03:4000:55:efb::a1;
 set_real_ip_from 2a03:4000:5:65b:388a:15ff:fedc:30d6;
 set_real_ip_from 2a03:4000:56:91:480a:eeff:fea8:f9c6;
 set_real_ip_from 2a03:4000:6:102b:c457:f3ff:feb0:a6d0;
@@ -1161,6 +1163,7 @@ set_real_ip_from 2a03:4000:6:4015:8841:50ff:fe0d:719c;
 set_real_ip_from 2a03:4000:6:614:d803:40ff:fec3:832a;
 set_real_ip_from 2a03:4000:66:15:18a0:6bff:fe90:3147;
 set_real_ip_from 2a03:4000:66:d88:6469:50ff:fe0b:98a8;
+set_real_ip_from 2a03:4000:6:b136::4;
 set_real_ip_from 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 set_real_ip_from 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
 set_real_ip_from 2a03:6f20:531::254;
@@ -1496,15 +1499,14 @@ set_real_ip_from 31.42.185.134;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.1.201.144;
 set_real_ip_from 37.120.166.23;
+set_real_ip_from 37.120.188.156;
 set_real_ip_from 37.120.239.59;
-set_real_ip_from 37.187.5.192;
 set_real_ip_from 37.228.129.128;
 set_real_ip_from 37.228.129.63;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.242.254.131;
 set_real_ip_from 38.97.116.244;
-set_real_ip_from 44.193.159.204;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.232.151;
 set_real_ip_from 45.130.20.250;
@@ -1577,6 +1579,7 @@ set_real_ip_from 46.226.164.14;
 set_real_ip_from 46.232.251.191;
 set_real_ip_from 46.234.47.105;
 set_real_ip_from 46.38.255.27;
+set_real_ip_from 46.41.150.103;
 set_real_ip_from 47.243.103.140;
 set_real_ip_from 47.243.74.136;
 set_real_ip_from 50.3.182.133;
@@ -1604,7 +1607,6 @@ set_real_ip_from 5.196.73.12;
 set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.219;
-set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.190;
@@ -1628,6 +1630,7 @@ set_real_ip_from 5.2.67.226;
 set_real_ip_from 5.2.79.179;
 set_real_ip_from 5.2.79.190;
 set_real_ip_from 5.39.25.229;
+set_real_ip_from 54.167.48.16;
 set_real_ip_from 54.224.79.94;
 set_real_ip_from 5.42.66.6;
 set_real_ip_from 5.42.80.232;
@@ -1693,7 +1696,6 @@ set_real_ip_from 84.54.51.68;
 set_real_ip_from 84.54.51.69;
 set_real_ip_from 85.17.9.83;
 set_real_ip_from 85.204.116.211;
-set_real_ip_from 85.204.116.239;
 set_real_ip_from 85.204.116.88;
 set_real_ip_from 85.215.76.62;
 set_real_ip_from 85.93.218.204;
@@ -1742,6 +1744,7 @@ set_real_ip_from 91.210.59.57;
 set_real_ip_from 91.219.236.101;
 set_real_ip_from 91.219.237.56;
 set_real_ip_from 91.219.239.166;
+set_real_ip_from 91.92.109.126;
 set_real_ip_from 91.92.109.43;
 set_real_ip_from 92.119.126.161;
 set_real_ip_from 92.205.129.119;
